# fluency

./: .zipignore  README.md  fluency.md  fluency.py  pyproject.toml
.github/workflows/: publish.yml
tests/: leo.md  test_zippa.py
tests/dummy_dir/: notes.txt
zippa/: cli.py  main.py
