[project]
name = "fluency"
version = "0.1.0"
description = "Notes and examples from Fluent Python book"
authors = [
    {name = "Bob Belderbos", email = "bob@pybit.es"},
    {name = "Carlos Pumar-Frohberg", email = "cpumarfrohberg@gmail.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"

dependencies = [
    "ruff>=0.1.0",
    "marimo>=0.15.2",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = []

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["fluency"]